fix color issue and diff. component overflow

--- a/styles/utility.globals.css
+++ b/styles/utility.globals.css
@@ -57,3 +57,9 @@
 .cursor-pointer {
     cursor: pointer;
 }
+
+@media screen and (max-width: 992px) {    
+    .max-lg\:flex-wrap {
+        flex-wrap: wrap;
+    }
+}
